--- a/todo.html
+++ b/todo.html
@@ -1,13 +1,23 @@
 <!doctype html>
 <html lang='en'>
         <head>
-            <meta charset="utf-8">
-            <title>Weather Guide</title>
+		<meta charset="utf-8">
+    	        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+                
+                <title>My Title</title>
 		
+                <!-- BOOTSTRAP -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+		<!-- /BOOTSTRAP -->
+
+
         </head>
 
-        <body> 
-           <center><div>HOLA!</div></center> 
+        <body>
+                <center><h1>My HTML</h1></center>
         </body>
 
 </html>
